
=head1 REVISION HISTORY FOR Set::Object

=head1 1.20, 16 Feb 2007

=over

=item *

The C<-E<gt>compare> function was returning "disjoint" for empty sets.
RT#24965.  (Nigel Metheringham)

=item *

Document lots of methods that were previously not documented.

=item *

Fix C<Set::Object::Weak::set()>.  It was not passing its arguments to
C<Set::Object::Weak-E<gt>new()>, which was very broken.

=back

=head1 1.19, 23 Jan 2007

=over

=item *

remove bogus inclusions of Data::Dumper and Devel::Peek

=item *

New class C<Set::Object::Weak>, which all weak sets should get
re-blessed into when you call C<-E<gt>weaken>.  Also added alternative
methods of constructing weak sets.

=item *

Fix a memory leak with scalar members (the internal hash used to store
the items was never being freed).  RT#24508.

=back

=head1 1.18, 14 Sep 2006

=over

=item *

We could only build on gcc due to the use of variadic macros.
use C<#ifdef> to hide this GCC-specific extension (used only for
debugging) from non-GCC compilers.

=item *

Add note to man page on compatibility of C<Storable> serializations of
C<Set::Object>s between revisions.

=back

=head1 1.17, 1 Aug 2006

=over

=item *

fix compile problem affecting some platforms

=back

=head1 1.16, 18 Jul 2006

=over

=item *

weak reference support

=back

=head1 1.15, 21 Jun 2006

=over

=item *

Dumping sets with scalars in them via L<Storable> now works.

=back

=head1 1.14

=over

=item *

Fix build problem on Win32 (thanks Steffen Goeldner)

=back

=head1 1.13

=over

=item *

Fix F<Makefile.PL> so this F<Changes.pod> is not delivered as
C<Set::Changes> :-}

=item *

Restore compatibility with 5.6.0

=item *

Remove some compile-time warnings, please let me know if this version
does not build on any platform!

=back

=head1 1.12, 30 Aug 2005

=over

=item *

added patch from Sergey Skvortsov for backwards compatibility with
Perl versions before 5.8 (include >100k F<ppport.h>!)

=item *
