@@ -1,4 +1,4 @@
-README for Set::Object 1.19
+README for Set::Object 1.21
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Set::Object provides for sets of Perl objects - scalars and references.
 
