@@ -490,7 +490,7 @@ require AutoLoader;
 
 @EXPORT_OK = qw( ish_int is_int is_string is_double blessed reftype
 		 refaddr is_overloaded is_object is_key set weak_set );
-$VERSION = '1.20';
+$VERSION = '1.21';
 
 bootstrap Set::Object $VERSION;
 
